objects/ServiceResource.object
<CustomObject>
    <fields>
        <fullName>Additional_Job_Revenue__c</fullName>
        <formula>Additional_Jobs_Scheduled__c * 150</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Job Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Jobs_Scheduled__c</fullName>
        <formula>Number_of_Jobs_Optimized__c - Number_of_Jobs_Scheduled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Jobs Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractor_s_Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor&apos;s Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Service Resources</relationshipLabel>
        <relationshipName>Service_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Mile__c</fullName>
        <description>Represents the Service Resource&apos;s cost per mile traveled. Value is used to calculate the savings in travel time after optimization has run.</description>
        <label>Cost Per Mile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used for uniquely identifying records for Data Packs and other tools.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Efficiency__c</fullName>
        <label>Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Online_Offset__c</fullName>
        <description>Online offset in minutes</description>
        <label>Online Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Picture_Link__c</fullName>
        <label>Picture Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Speed__c</fullName>
        <label>Travel Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gantt_Color__c</fullName>
        <description>Used to update a corresponding pick-list field on the Service Appointment in order to visualize the original &apos;Owner&apos; of the Service Appointment. Exposed via Gantt Pallet for extra visualization sizzle.</description>
        <label>Gantt Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Jobs_Optimized__c</fullName>
        <description>Captures the number of jobs assigned to the Service Resource after optimization has run. Used to calculate the value of additional utilization after optimization has run.</description>
        <label>Number of Jobs Optimized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Jobs_Scheduled__c</fullName>
        <description>Used to capture the number of jobs assigned to the Service Resource before optimization is run. Helps put value behind the increased utilization of the Service Resource</description>
        <label>Number of Jobs Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_KPI_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marking this field &apos;TRUE&quot; will execute a process builder to clear out the values within the fields for the &quot;Optimization KPI&quot; reports and Dashboards.</description>
        <label>Opt KPI Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optimization_KPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marking this field &apos;TRUE&apos; will include the service resource&apos;s metrics within the Optimization KPI reports and dashboards</description>
        <label>Optimization KPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optimization_Revenue__c</fullName>
        <description>This formula field calculates the total revenue or value after optimization. It combines the savings from reduction in travel and the increase in revenue due to additional jobs scheduled.</description>
        <formula>Travel_Savings__c + Additional_Job_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Optimization Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Travel_Time__c</fullName>
        <description>This field is used to capture the total travel time of the service resource within the optimization KPI dashboard before optimization</description>
        <label>Original Travel Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Delta__c</fullName>
        <formula>Original_Travel_Time__c - Updated_Travel_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Savings__c</fullName>
        <description>This formula field is used to calculate the savings to an organization due to the reduction in travel of the service resource</description>
        <formula>Cost_Per_Mile__c * ((Travel_Delta__c / 60) * FSL__Travel_Speed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Travel_Time__c</fullName>
        <description>This field is used to capture the total travel time of the service resource after optimization</description>
        <label>Updated Travel Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_ServiceResources</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>FSL__Priority__c</columns>
        <columns>Is_Contractor__c</columns>
        <columns>Contractor_s_Service_Territory__c</columns>
        <columns>IsActive</columns>
        <columns>LastModifiedBy</columns>
        <columns>ResourceType</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Resources</label>
    </listViews>
    <listViews>
        <fullName>KPI_Resources</fullName>
        <columns>Name</columns>
        <columns>Opt_KPI_Reset__c</columns>
        <columns>Optimization_KPI__c</columns>
        <columns>Gantt_Color__c</columns>
        <columns>Cost_Per_Mile__c</columns>
        <columns>FSL__Travel_Speed__c</columns>
        <columns>Original_Travel_Time__c</columns>
        <columns>Updated_Travel_Time__c</columns>
        <columns>Travel_Delta__c</columns>
        <columns>Travel_Savings__c</columns>
        <columns>Number_of_Jobs_Scheduled__c</columns>
        <columns>Number_of_Jobs_Optimized__c</columns>
        <columns>Additional_Jobs_Scheduled__c</columns>
        <columns>Additional_Job_Revenue__c</columns>
        <columns>Optimization_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Optimization_KPI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>KPI Resources</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceResources</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Resources</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL__Capacity_Resource_of_Type_Crew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &apos;C&apos;))</errorConditionFormula>
        <errorMessage>Capacity Resource Can&apos;t Be of Type Crew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Resource_travel</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Travel_Speed__c</errorDisplayField>
        <errorMessage>Resource travel speed must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>